--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,41 @@ body {
     font-family: Helvetica, Arial, sans-serif;
 }
 
+section {
+    padding: 60px;
+}
+
+/* Global class selectors */
+
+.section-title {
+    font-size: 55px;
+    color: #024e76;
+    margin-bottom: 35px;
+    padding: 0 100px 20px 100px;
+    display: inline-block;
+    border-bottom: 3px solid;
+}
+
+.primary-border {
+    border-color: #fce138;
+}
+
+.secondary-border {
+    border-color: #39a6b2;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+/* Global class selectors */
+
 /* Header Style Start */
+
 header {
     padding: 20px 35px;
     background-color:#39a6b2;
@@ -48,7 +82,8 @@ header nav ul li a {
 } 
 /* Header Style Ends */
 
-/* Hero Style Start */
+/* Hero/form Style Start */
+
 .hero {
     background-image: url("../images/hero-bg.jpg");
     height: 600px;
@@ -66,7 +101,6 @@ header nav ul li a {
     bottom: 120px;
     right: 140px;
 }
-/* Hero Style End */
 
 .hero-form h3 {
     font-size: 24px;
@@ -77,7 +111,6 @@ header nav ul li a {
     margin: 5px 0 15px 0;
 } 
 
-/* form-input style start */
 .form-input {
     border: 1px solid #024e76;
     display: block;
@@ -87,7 +120,6 @@ header nav ul li a {
     width: 100%;
     margin-bottom: 15px;
 }
-/* form-input style end*/
 
 .hero-form label {
     margin: 0 5px;
@@ -101,37 +133,11 @@ button {
     font-size: 16px;
 }
 
+/* Hero/form Style end */
 
-section {
-    padding: 60px;
-}
-
-.section-title {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
-    border-bottom: 3px solid;
-}
-
-.primary-border {
-    border-color: #fce138;
-}
-
-.secondary-border {
-    border-color: #39a6b2;
-}
-
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
 
 /* what-we-do(intro) style starts */
+
 .intro {
     text-align: center;
 }
@@ -143,9 +149,11 @@ section {
     font-size: 20px;
     margin: 0 auto;
 }
+
 /* what-we-do style ends */
 
 /* what-you-do(steps) style starts */
+
 .steps {
     text-align: center;
     background: #fce138;
@@ -174,9 +182,11 @@ section {
 .steps span{
     font-size: 38px;
 }
+
 /* what-you-do(steps) style ends */
 
 /* Trainers style start */
+
 .trainers {
     text-align: center;
 }
@@ -218,7 +228,53 @@ section {
 
 /* Trainers style ends */
 
+/* Contact info */
+
+.contact {
+    text-align: center;
+    background-color: #024e76;
+}
+
+.contact h2 {
+    color: #fce138;
+}
+
+
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
+}
+
+.contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
+
+.contact-info a {
+    color: #fce138;
+}
+
+/* Reach Out Style End */
+
+
 /* Footer Styling */
+
 footer {
     background: #fce138;
     width: 100%;
