--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,15 +49,16 @@ section {
 header {
     padding: 20px 35px;
     background-color:#39a6b2;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
-   
     margin: 0;
-    display: inline;
 }
 
 header a {
@@ -66,7 +67,6 @@ header a {
 }
 
 header nav {
-    float: right;
     margin: 7px 0;
 }
 
