--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,34 +15,8 @@ section {
     padding: 60px;
 }
 
-/* Global class selectors */
 
-.section-title {
-    font-size: 55px;
-    color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
-    border-bottom: 3px solid;
-}
 
-.primary-border {
-    border-color: #fce138;
-}
-
-.secondary-border {
-    border-color: #39a6b2;
-}
-
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
-/* Global class selectors */
 
 /* Header Style Start */
 
@@ -157,16 +131,13 @@ button {
 
 /* what-we-do(intro) style starts */
 
-.intro {
-    text-align: center;
-}
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 /* what-we-do style ends */
@@ -174,7 +145,6 @@ button {
 /* what-you-do(steps) style starts */
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -207,7 +177,6 @@ button {
 /* Trainers style start */
 
 .trainers {
-    text-align: center;
 }
 
 .trainer {
@@ -250,7 +219,6 @@ button {
 /* Contact info */
 
 .contact {
-    text-align: center;
     background-color: #024e76;
 }
 
@@ -316,4 +284,38 @@ footer div {
 
 footer a {
     color: #024e76;
+}
+
+/* Footer Style end */
+
+/* Utility style classes */
+
+.section-title {
+    font-size: 55px;
+    color: #024e76;
+    border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
+}
+
+.primary-border {
+    border-color: #fce138;
+}
+
+.secondary-border {
+    border-color: #39a6b2;
+}
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.flex-row {
+    display: flex;
 }
